syntax = "proto3";

package bitswap.message.pb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
//import "google/protobuf/timestamp.proto";

message Ticket {
  //string publisher    = 1;
  string sendTo       = 1;
  string cid          = 2;
  int64  byteSize     = 3;
  int64  timeStamp    = 4;
  State  state        = 5;
  enum State {
    New    = 0;
    ACK    = 1;
    CANCEL = 2;
    TIMEOUT= 3;
  }
}

message Ticketlist {
  repeated Ticket items = 1;
}

message TicketAck {
  string publisher    = 1;
  string receiver     = 2;
  string cid          = 3;
  Type type = 4;
  enum Type{
    ACCEPT = 0;
    CANCEL = 1;
  }
}

message TicketAcklist{
  repeated TicketAck items = 1;
}

message Message {

  message Wantlist {

    message Entry {
			bytes block = 1;		// the block cid (cidV0 in bitswap 1.0.0, cidV1 in bitswap 1.1.0)
			int32 priority = 2;	// the priority (normalized). default to 1
			bool cancel = 3;		// whether this revokes an entry
		}

    repeated Entry entries = 1 [(gogoproto.nullable) = false];	// a list of wantlist entries
    bool full = 2;							// whether this is the full wantlist. default to false
  }

  message Block {
    bytes prefix = 1;		// CID prefix (cid version, multicodec and multihash prefix (type + length)
    bytes data = 2;
  }



  Wantlist wantlist = 1 [(gogoproto.nullable) = false];
  repeated bytes blocks = 2;		// used to send Blocks in bitswap 1.0.0
  repeated Block payload = 3 [(gogoproto.nullable) = false];		// used to send Blocks in bitswap 1.1.0
  //Ticketlist ticketlist = 4;
  //TicketAcklist ticketAcklist = 5;
  repeated Ticket ticketlist = 4;
  repeated TicketAck ticketAcklist = 5;
}
